# django-blog

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: db.sqlite3
src/account/: forms.py  models.py  views.py
src/account/migrations/: 0001_initial.py
src/blog/: admin.py  api.py  forms.py  manager.py  models.py  urls.py  views.py
src/blog/templates/blog/: base.html
src/blog/templates/blog/post/: detail.html  list.html  pagination.html
src/blog/templatetags/: render_markdown.py
src/django_blog/: settings.py  urls.py
src/templates/: base.html  nav.html
src/templates/account/: login.html  profile.html  signup.html
src/templates/blog/post/: comment_form.html  detail.html  list.html  pagination.html
src/templates/registration/: logged_out.html
